--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
 
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="DestinationLb">Destination:</string>
 
 </resources>
